Just going to leave slider at all screen sizes for now. But fixed the slider arrow's size and position on mobile screens.

--- a/src/Pages/Lawyer/main.css
+++ b/src/Pages/Lawyer/main.css
@@ -10,6 +10,16 @@
   background: lime;
 } */
 
+@media (max-width: 500px) {
+  .leftSliderArrow {
+    margin-left: -1rem;
+  }
+
+  .rightSliderArrow {
+    margin-right: -1rem;
+  }
+}
+
 .cls-1 {
   fill: #f2f2f2;
   font-size: 24px;
